# ABEL

./: .gitignore  3chamber.behs.yaml  Fear Conditioning Behaviors.yaml  LICENSE  README.md  generate_readme_docx.py  homecage.yaml  pyproject.toml  readme.txt  run_abel.bat  run_benchmark.bat  run_validation.bat
abel/: __init__.py  _install_check.py  app.py  changelog.py  main.py
docs/: architecture_plan.md  project_structure.md
scripts/: _check_dead_features.py  _fix_encoding.py  _reextract_pose_features.py  ast_check.py  debug_bouts.py  generate_paper_docs.py  regenerate_meta_figures.py  strip_bom.py  verify_fix.py
tests/: test_active_learning_label_encoding.py  test_active_learning_review_remap.py  test_active_learning_scheduler.py  test_auto_settings.py  test_baseline_import.py  test_batch_run_eta.py  test_behavior_awareness_ablation.py  test_behavior_grid.py  test_behavior_removal_cleanup.py  test_body_part_rename.py  test_candidate_overlap_suppression.py  test_clear_candidate_queue.py  test_clip_selection_median.py  test_clipwise_delta_edge_average.py  test_config_io.py  test_context_advanced_roi_integration.py  test_contrastive_essence.py  test_direct_use_distance_alignment.py  test_discrimination.py  test_distance_canonicalization.py  test_enrichment_session_recovery.py  test_eta_estimator.py  test_evaluation_metric_correctness.py  test_export_boutframes_workbook.py  test_export_labeled_video_logic.py  test_export_subject_fields.py  test_feature_exclusions.py  test_feature_prep_planning.py  test_feature_roles.py  test_flow_downsample_parity.py  test_fusion_inference_perf.py  test_gpu_flow_cache_perf.py  test_holdout_leakage.py  (+55 more)
(+187 files in other folders)
