[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abel"
version = "0.5.2"
description = "ABEL (Active-learning Behavior Estimation and Labeling): local-first desktop app for behavioral modeling, review, and export from DLC-tracked rodent videos."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "ABEL Team"}]
dependencies = [
  "PySide6>=6.7",
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "pyarrow>=15.0",
  "matplotlib>=3.8",
  "PyYAML>=6.0",
  "python-docx>=1.1",
  "openpyxl>=3.1"
]

[project.optional-dependencies]
benchmarks = [
  "xgboost>=2.1"
]
gpu = [
  "torch>=2.0"
]
preprocessing = [
  "opencv-python>=4.10",
  "scipy>=1.13",
  "imageio>=2.35",
  "imageio-ffmpeg>=0.5"
]
syllables = [
  "keypoint-moseq>=0.1",
  "scikit-learn>=1.5",
  "umap-learn>=0.5",
  "hdbscan>=0.8"
]
all = [
  "xgboost>=2.1",
  "torch>=2.0",
  "opencv-python>=4.10",
  "scipy>=1.13",
  "imageio>=2.35",
  "imageio-ffmpeg>=0.5",
  "keypoint-moseq>=0.1",
  "scikit-learn>=1.5",
  "umap-learn>=0.5",
  "hdbscan>=0.8"
]
dev = [
  "pytest>=8.3"
]

[project.scripts]
abel = "abel.main:main"
abel-benchmark = "abel.benchmark.gui:launch_benchmark_gui"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
abel = ["ui/assets/*.ico", "ui/assets/*.png", "ui/assets/*.svg"]

[tool.setuptools.packages.find]
where = ["."]
include = ["abel*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
